--- a/public/assets/css/AdminLTE.css
+++ b/public/assets/css/AdminLTE.css
@@ -5101,3 +5101,46 @@ button, .btn, table{
   margin-right: 7px;
   vertical-align: middle;
 }
+
+.viewcase-report-section {
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 20px;
+        justify-content: center;
+}
+.viewcase-report-section h2 {
+    margin: 0;
+    font-size: 24px;
+    margin-bottom: 13px;
+}
+.viewcase-report-section .box-inner {
+    border-bottom: 1px solid #cdcdcd;
+    padding: 10px 0px;
+    margin-bottom: 25px;
+    width: 47%;
+}
+.viewcase-report-section .box-inner:last-child, 
+.viewcase-report-section .box-inner:nth-last-child(2){
+  border:none;
+}
+.viewcase-report-section .box-inner p {
+    font-size: 14px;
+    margin: 7px 0px;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .viewcase-report-section .box-inner {
+      width:100%;
+  }
+  .viewcase-report-section .box-inner:nth-last-child(2){
+    border-bottom: 1px solid #cdcdcd;
+  }
+}
+@media (max-width: 767px) {
+  .viewcase-report-section .box-inner {
+      width:100%;
+  }
+  .viewcase-report-section .box-inner:nth-last-child(2){
+    border-bottom: 1px solid #cdcdcd;
+  }
+}
